NC-2: Commit css and html file

--- a/3.CSS/myStyle.css
+++ b/3.CSS/myStyle.css
@@ -8,7 +8,7 @@ html *
 	padding: 5px;
 	text-decoration: none;
 	text-align: center;
-	display: inline-block;
+	display: inline-block !important;
 }
 
 .container{
